alter background color of rows so they stand out from the dashboard panel background. Also fixed collapsed sidebar raintank icon, it was calling the grafana icon. fixes #542

--- a/public/less/raintank.variables.light.less
+++ b/public/less/raintank.variables.light.less
@@ -54,10 +54,10 @@
 @rt-primary:				@rt-blue;
 
 @raintankPanelBackground: 	@grayLighter;
+@raintankRowBackground: 	lighten(@grayLight, 35%);
 @raintankPanelBorder: 		solid 1px @grayLight;
 @raintankTriggerBorder:		solid 1px @grayLight;
 
-@rt-primary:				@rt-blue;
 @rt-emphasis:				darker(@textColor, 20%);
 
 
